--- a/dots/.ssh-config
+++ b/dots/.ssh-config
@@ -1,9 +1,4 @@
 Host *
-  UseKeychain yes
-  AddKeysToAgent yes
-
-# Personal GitHub
-Host github.com
- HostName github.com
- PreferredAuthentications publickey
- IdentityFile ~/.ssh/github-personal
+ UseKeychain yes
+ AddKeysToAgent yes
+ IdentityFile ~/.ssh/id_rsa
